# Consigli-Challenge

./: .gitignore  README.md  guide.md  start-dev.sh  stop-dev.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/api/v1/: query.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: chat.py  tables.py
backend/app/services/: __init__.py  memory.py  rag.py  structured.py  vectorstore.py
backend/tests/: test_health.py  test_query.py  test_rag_validation.py  test_rag_workflow.py
docs/: architecture.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/chat/: ChatInput.tsx  ChatLayout.tsx  ChatMessageList.tsx
frontend/src/hooks/: useChatSession.ts
frontend/src/lib/: api.ts  types.ts
ingest/: README.md  pyproject.toml
ingest/src/ingest/: __init__.py  chunking.py  cli.py  pipeline.py  table_context.py
ingest/src/ingest/embeddings/: __init__.py  chroma.py
ingest/src/ingest/parsers/: __init__.py  documents.py  markdown_parser.py  pdf_parser.py  word_parser.py
ingest/src/ingest/stores/: chroma_writer.py  sqlite_writer.py
ingest/src/ingest/utils/: __init__.py  chunking.py  files.py  text.py
scripts/: pdf_to_markdown.py  quick_ingest_markdown.py
