[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "annual-report-analyst-backend"
version = "0.1.0"
description = "FastAPI backend for the LLM-powered annual report analyst."
authors = [
  { name = "Consigli Challenge Team" }
]
readme = "../guide.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-chroma>=0.1.1",
  "openai>=1.40.0",
  "chromadb>=0.5.5",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "httpx>=0.27.2",
  "python-multipart>=0.0.12",
  "tenacity>=8.4.2",
  "structlog>=24.2.0",
  "orjson>=3.10.3",
  "langsmith>=0.1.77"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.3",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "mypy>=1.11.2",
  "types-orjson>=3.6.2.20240801"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
